@@ -1,0 +1,254 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+  "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+  <title>Compiling.html</title>
+  <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+  <style type="text/css">
+  <!--
+    body {
+      font-family: Verdana,Helvetica,Arial,sans-serif;
+      font-size: small;
+    }
+    code,pre {
+      font-family: "Courier New",Courier,monospace;
+      font-size: 1em;
+    }
+    h3 {
+      padding: 2px;
+      border-left: 4px solid #FFCC00;
+      border-bottom: 1px solid #FFCC00;
+    }
+    h4 {
+      padding: 2px;
+      border-left: 8px solid #FF9933;
+      border-bottom: 1px solid #FF9933;
+    }
+    h5 {
+      font-size: small;
+    }
+    pre {
+      margin-left: 25px;
+      margin-right: 25px;
+      padding: 5px;
+      background-color: #EEEEEE;
+      border: 1px solid black;
+    }
+    p.note {
+      padding: 5px;
+      background-color: #DDDDFF;
+      border: 1px solid blue;
+    }
+    acronym {
+      cursor: help;
+      border-bottom: 1px dotted black;
+    }
+  -->
+  </style>
+</head>
+<body>
+<h2>Compiling WinMerge</h2>
+
+<p>Compiling sources is usually the first thing you want to do. Source packages
+for different versions are available from SourceForge.net downloads or from
+Subversion repository. See <a href="readme-Subversion.html">readme-Subversion.html
+</a> for more information about Subversion repository and using it.</p>
+
+<h3>Table of Contents</h3>
+<ol>
+  <li><a href="#Environment">Environment</a></li>
+  <li><a href="#Buildall_bat">BuildAll.bat</a></li>
+  <li><a href="#ProjectFiles">Project Files</a></li>
+  <li><a href="#Compiling_expat">Compiling expat</a></li>
+  <li><a href="#Compiling_scew">Compiling SCEW</a></li>
+  <li><a href="#Compiling_pcre">Compiling PCRE</a></li>
+  <li><a href="#Compiling_core">Compiling WinMerge executables</a></li>
+  <li><a href="#VS2005">Visual Studio 2005</a></li>
+  <li><a href="#ShellExt">Shell Extension</a></li>
+</ol>
+
+
+<h3><a name="Environment">Environment</a></h3>
+<h4>Supported Compilers</h4>
+<ul>
+  <li>Visual Studio 2003.Net + Service Pack 1 (used for releases)</li>
+  <li>Visual Studio 6 + Service Pack 6</li>
+  <li>Visual Studio 2005 (occasional checks for compiling) (Service Pack 1 recommended)</li>
+</ul>
+<p>Note that WinMerge uses MFC heavily. So free (Express) editions of Visual Studio cannot
+compile WinMerge, unless you have MFC installed separately.</p>
+
+<h4>Libraries</h4>
+<p>WinMerge executable depends on Expat XML parser, SCEW and PCRE libraries.
+All are in the source tree (in <code>/Externals</code> -folder), and need to be
+compiled before compiling WinMerge executable.</p>
+
+<p class="note"><b>Visual Studio 2003.Net and later:</b> You'll need to convert
+library workspace and project files to new format before compiling.</p>
+
+<p> To convert workspace/project files, just open them into Visual Studio and
+let the Visual Studio to convert. Files are:
+<ul>
+  <li><code>Externals\expat\expat.dsw</code></li>
+  <li><code>Externals\scew\win32\scew.dsp</code></li>
+  <li><code>Externals\pcre\pcre.dsw</code></li>
+</ul>
+
+<h4>Additional requirements (out of source tree)</h4>
+<ul>
+  <li>HTML Help Workshop (either stand-alone or from Platform SDK)<br>
+    Download it from :<a href="http://msdn.microsoft.com/library/default.asp?url=/library/en-us/htmlhelp/html/hwMicrosoftHTMLHelpDownloads.asp">
+    HTMLHelp download</a>.</li>
+  <li>Platform SDK - be sure to use version that works with your version of Visual Studio:
+    <ul>
+      <li><strong>VC6</strong>: Platform SDK February 2003 - <a href="http://www.microsoft.com/msdownload/platformsdk/sdkupdate/psdk-full.htm">
+        Download and install</a></li>
+      <li><strong>VS2003.Net and later</strong>: Platform SDK Windows 2003 SP1 -
+       <a href="http://www.microsoft.com/downloads/details.aspx?familyid=0BAF2B35-C656-4969-ACE8-E4C0C0716ADB">
+       Download and install</a></li>
+    </ul>
+    Visual Studio 2003.Net and later come with Platform SDK but you may still want more recent version...</li>
+  <li>Installer needs own tools, documented in <a href="readme-InnoSetup.html">readme-InnoSetup.html</a></li>
+  <li>Manual needs Docbook tools, documented in <a href="readme-manual.html">readme-manual.html</a></li>
+</ul>
+
+<h5>Platform SDK components</h5>
+<p>With Feb 2003 Platform SDK (and VC6) following components are needed:</p>
+<ul>
+  <li>Core SDK - obviously..</li>
+  <li>MDAC SDK - for some ODBC etc headers needed by other PSDK headers..</li>
+  <li>Internet Devlopment SDK - for IE/Shell headers</li>
+</ul>
+<p>Basically same components are needed for Windows 2003 SP1 PSDK, but with a different name:</p>
+<ul>
+  <li>Microsoft Windows Core SDK - obviously..</li>
+  <li>Microsoft Data Access Services (MDAC) SDK - for some ODBC etc headers needed by other PSDK headers..</li>
+  <li>Microsoft Web Workshop (IE) SDK - for IE/Shell headers</li>
+</ul>
+<p class="note">If you installed PSDK separately, don't forget to add the PSDK paths to Visual
+Studio's <em>Include</em> and <em>Library</em> directories. The easiest way is to use the
+"<em>Visual Studio Registration\Register PSDK directories with Visual Studio</em>" item from
+the "<em>Platform SDK</em>" start menu folder.</p>
+
+<h3><a name="Buildall_bat">buildall.bat</a></h3>
+<p>There is a <code>buildall.bat</code> in the root folder of source tree. This batch file invokes
+<code>devenv.exe</code> to build (almost) all projects in WinMerge tree. However, it has
+a couple
+of restrictions:
+<ul>
+  <li>It cannot convert project files from VC6 format to newer formats. This must be done first
+      by opening every project to Visual Studio.</li>
+  <li>It cannot build 64-bit shell extension</li>
+</ul></p>
+
+<p>To use <code>buildall.bat</code>:
+<ul>
+  <li>Open Visual Studio Command Prompt (or run <code>vcvars32.bat</code> from Command Prompt).</li>
+  <li>Go to root folder of WinMerge folder structure.</li>
+  <li>Run the batch file.</li>
+</ul></p>
+
+<h3><a name="ProjectFiles">Project files</a></h3>
+<p>Project file for WinMerge executable (in <code>/Src</code>) and other projects like
+ShellExtension (in <code>/ShellExtension</code>) have their own project files. There is no one
+single project/workspace file to compile all projects.<p>
+
+<p>The Visual Studio project file for MSVC6 comes with the WinMerge sources. Newer versions of
+Visual Studio can open that file too, they just ask if one wants to convert to
+the new version.
+The reason we don't ship project files for all Visual Studio versions is we have no resources
+to keep all versions up to date. People can't test all versions themselves, and easily forget
+to update at least one file. So we easily end up in a situation where there is no properly
+working project file at all...</p>
+
+<p>After opening the project file you need to add the HTML Help Workshop path as additional include-
+and library-path.</p>
+
+<p class="note"><b>NOTE:</b> There might be problems compiling/debugging with Visual Studio 2003 when using
+HTML Help WorkShop from the Platform SDK in Visual Studio directory. Download and
+install HTML Workshop as stand-alone and include headers and libraries from standalone
+directory. The probable cause is that including files from Platform SDK directories breaks
+things.</p>
+
+<p class="note"><b>Visual Studio 2003.Net:</b> WinMerge build uses couple of helper batch files
+(<code>Src/PreLink.bat</code> and <code>Src/PostBuild.bat</code>) run from project file.
+Visual Studio adds additional quotation marks to these rules when converting for new version,
+which makes builds to fail. The error is something like <code>The system cannot
+find the batch label specified - ".\..\BuildTmp\MergeUnicodeDebug"</code> where
+the path varies depending on compile target.
+
+<blockquote>Check that rules to call those batch files are like:
+<code>PreLink.bat $(IntDir) $(TargetPath)</code>
+
+<p>without additional quotation marks, like:
+<code>PreLink.bat "$(IntDir)" "$(TargetPath)"</code></blockquote>
+</p>
+
+<h3><a name="Compiling_expat">Compiling expat</a></h3>
+<p>expat is in <code>/Externals/expat</code> folder in source tree. To compile expat:</p>
+<ul>
+  <li>Open Visual Studio workspace <code>/Externals/expat/expat.dsw</code>. If you are
+    using Visual Studio 2003.Net or later you need to convert the file to the new format when
+    Visual Studio opens the file.</li>
+  <li>Select from Visual Studio menu Build / Batch Build</li>
+  <li>Select either debug or release targets.</li>
+  <li>Select Rebuild All</li>
+ </ul>
+
+<p>After build finishes, selected (debug or release) lib and dll files are in
+<code>/Build/expat</code>. WinMerge executable's project file picks them from there.</p>
+
+<h3><a name="Compiling_scew">Compiling scew</a></h3>
+<p>scew is in <code>/Externals/scew</code> folder in source tree. To compile scew:</p>
+<ul>
+  <li>Open Visual Studio project file <code>/Externals/scew/win32/scew.dsp</code> If you are
+    using Visual Studio 2003.Net or later you need to convert the file to the new format when
+    Visual Studio opens the file.</li>
+  <li>Select from Visual Studio menu Build / Batch Build</li>
+  <li>Make sure all targets are selected</li>
+  <li>Select Rebuild All</li>
+</ul>
+
+<h3><a name="Compiling_pcre">Compiling PCRE</a></h3>
+<p>PCRE is in <code>/Externals/pcre</code> folder in source tree. To compile PCRE:</p>
+<ul>
+  <li>Open Visual Studio workspace file <code>/Externals/pcre/pcre.dsw</code> If you are
+    using Visual Studio 2003.Net or later you need to convert the file to the new format when
+    Visual Studio opens the file.</li>
+  <li>Select from Visual Studio menu Build / Batch Build</li>
+  <li>Select <code>config_pcre</code> and <code>pcre</code> projects and build them</li>
+  <li>Select Rebuild All</li>
+  <li><i>Or</i> you can also compile those two projects individually, first
+    <code>config_pcre</code> and then <code>pcre</code> project.
+</ul>
+
+<p>After build finishes, lib and dll files are in <code>/Build/pcre</code>. WinMerge
+executable's project file picks them from there.</p>
+
+<h3><a name="Compiling_core">Compiling WinMerge executable targets</a></h3>
+<p>There are several targets available for compiling different projects. Targets used
+for compiling releases are:<br>
+<ul>
+  <li><code>WinMerge.exe</code> : Release</li>
+  <li><code>WinMergeU.exe</code> : UnicodeRelease</li>
+  <li><code>ShellExtension.dll</code> : Release MinDependency</li>
+  <li><code>ShellExtensionU.dll</code> : Unicode Release MinDependency</li>
+  <li>Plugin dlls : Unicode Release MinDependency</li>
+</ul>
+
+<h3><a name="VS2005">Visual Studio 2005</a></h3>
+<p>When the VC6 project file (.dsp) is converted to a Visual Studio 2005 project, it does not
+compile correctly as is. The problem is Visual Studio 2005 automatically generates and
+embeds a manifest file for the executable. And as the WinMerge resource file includes
+a manifest
+file there are conflicts.</p>
+
+<p>The easiest way to fix the compile is to disable VS2005 from creating and embedding
+the manifest file. From project properties:
+<ul>
+  <li>disable Linker / Manifest File / Generate Manifest (set to "No")</li>
+  <li>disable Manifest Tool / Input and Output/ Embed Manifest (set to "No")
+</ul></p>
+
+</body>
+</html>
