@@ -68,9 +68,11 @@
 <p>Developer documentation is in <code><a href="Developers/index.html">Developers</a>-subfolder</code>.
 </p>
 
-<p><b>Important files in user documentation:</b>
+<p><b>Important files in developer documentation:</b>
 <ul>
-  <li><a href="Developers/readme-developers.html">ReadMe for developers</a>
+  <li><a href="Developers/Compiling.html">WinMerge compiling</a> contains instructions
+    for setting up development environment and compiling WinMerge.</li>
+   <li><a href="Developers/readme-developers.html">ReadMe for developers</a>
     contains lots of development-related information.</li>
   <li><a href="Developers/readme-Subversion.html">Subversion info</a></li>
   <li><a href="Developers/Translations.html">Translation instructions</a></li>
